add models, views

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
     	<div class="container">
             <a class="navbar-brand mynav" href="{% url 'index' %}">Главная страница</a>
     		<ul class="nav navbar-nav navbar-right">
-    			    <li><a href="#" class="btn btn-simple">Список решений</a></li>
+    			    <li><a href="{% url 'djapp:list' %}" class="btn btn-simple">Список решений</a></li>
                     <li><a href="#" class="btn btn-simple">Залогнуть</a></li>
                     <li><a href="#" class="btn btn-simple">Вписаться</a></li>
     		</ul>
