--- a/djapp/templates/djapp/item_list.html
+++ b/djapp/templates/djapp/item_list.html
@@ -3,4 +3,16 @@
 {% block content %}
 <h1>СПИСОК РЕШЕНИЙ</h1>
 
+    <div class="col-md-8">
+        {% for item in item_list %}
+            <h3>
+                № &nbsp; {{ item.id }} &nbsp;
+                название: &nbsp;  <a href="{% url 'djapp:detail' pk=item.id %}">{{ item.name }}</a> &nbsp;
+                цена: {{ item.price }}
+            </h3>
+            <img src="{{ item.image.url }}" alt="Embedded Image" style="height:50px;"/>
+            <hr>
+         {% endfor %}
+    </div>
+
 {% endblock %}
