--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html'  %}
+{% load static from staticfiles %}
 
 {% block content %}
 <h1> ГЛАВНАЯ СТРАНИЦА</h1>
+<img src="{% static 'pics/main_page.jpg' %}"  alt="Main Image" style="height:600px;"  />
 
 {% endblock %}
