add style to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{# load staticfiles #}
+{% load staticfiles %}
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,7 @@
     <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-    {# <link rel="stylesheet" href="{% static '/css/master.css' %}">   #}
+    <link rel="stylesheet" href="{% static '/css/layout.css' %}">
 
 </head>
 <body>
